# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
    "drake_cc_googletest",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "godot_renderer",
    hdrs = glob(["*.h", "*.inl"]),
    srcs = glob(["*.cc"]),
    #linkopts = ["-lglfw", "-ldl", "-lpng", "-lz"],
    linkopts = ["-lglfw"],
    deps = select({
        "//conditions:default": ["@godotengine", "@eigen"],
        "//tools/cc_toolchain:apple": [],
    }),
    visibility=["//visibility:public"],
)

drake_cc_googletest(
    name = "godot_renderer_test",
    local = 1,
    deps = [
        ":godot_renderer",
    ],
)

add_lint_tests()
